# pebble-baby-album

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/pebble/: agents.py  cli.py  config.py  inbox.py  models.py  storage.py  summary.py
src/pebble/web/: app.py
src/pebble/web/static/: style.css
src/pebble/web/templates/: entry.html  index.html  milestones.html  search.html
tests/: test_agents.py  test_inbox.py  test_storage.py
tests/fixtures/: 2025-12-15.md  2025-12-20.md  2025-12-22.md  2026-01-05.md  2026-01-15.md
web/: app.py
web/static/: style.css
web/templates/: base.html  entry.html
